--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,27 @@ body {
   margin-top: 50px;
   color: white;
 }
+
+.auth-text {
+  color: white;
+}
+
+.enter-form-button {
+  width: 100%;
+  margin-top: 24px;
+  font-size: 24px;
+  padding: 10px 20px;
+  background-color: #bcec30;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+}
+
+.login-form-login,
+.login-form-password {
+  width: auto;
+}
+
+.login-form-login {
+  margin-bottom: 10px;
+}
